--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,46 @@
 services:
+  stats-db:
+    image: postgres:15-alpine
+    container_name: stats-db
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=stats
+      - POSTGRES_USER=stats
+      - POSTGRES_DB=stats
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U stats -d stats"]
+      timeout: 5s
+      interval: 5s
+      retries: 10
+
   stats-server:
+    build: stats-service/stats-server
+    container_name: stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
 
-  stats-db:
-    image: postgres:16.1
+  main-db:
+    image: postgres:15-alpine
+    container_name: main-db
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_PASSWORD=main
+      - POSTGRES_USER=main
+      - POSTGRES_DB=main
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U main -d main"]
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
-  ewm-service:
+  main-service:
+    build: main-service
+    container_name: main-service
     ports:
       - "8080:8080"
-
-  ewm-db:
-    image: postgres:16.1
+    depends_on:
+     - main-db
