Sprint 17 - Fix Postman test Еvm-service

--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
 spring.datasource.username=ewm
 spring.datasource.password=ewm
 
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 #spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 #spring.datasource.driver-class-name=org.h2.Driver
 
