--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.password=stats
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+#spring.datasource.driver-class-name=org.h2.Driver
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
