Sprint 17 - Part 3 - Postman Tests

--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
 
-#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=ewm
 spring.datasource.password=ewm
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.database=postgresql
 #spring.jpa.database=h2
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
